--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@prismicio/client": "^7.19.2",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
+    "clsx": "^2.1.1",
     "next": "15.4.6",
+    "next-view-transitions": "^0.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
