--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
     "clsx": "^2.1.1",
+    "mongoose": "^8.18.0",
     "next": "15.4.6",
     "next-view-transitions": "^0.3.4",
     "react": "19.1.0",
