--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@prismicio/react": "^3.2.1",
     "clsx": "^2.1.1",
     "mongoose": "^8.18.0",
-    "next": "15.4.6",
+    "next": "^15.5.2",
     "next-view-transitions": "^0.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
